new proj/src/objects/GE_ES_Risk_Factor_Configuration__c.object
<CustomObject>
    <description>This object holds the master list of P&amp;L-specific Risk Factors</description>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify the risk factor is in use or not.</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_Deviations__c</fullName>
        <label>Number of Deviations</label>
        <summaryForeignKey>GE_ES_Risk_Factor_Deviation__c.GE_ES_RiskFactor_PL_Configuration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_ES_PL_RF_UniqueId__c</fullName>
        <description>This formula field is used to retrieve the Riskfactor P&amp;L config record Id with the combination of PL and RF id.</description>
        <formula>GE_ES_PL__c &amp; GE_ES_Risk_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PL RF UniqueId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_PL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L</label>
        <referenceTo>GE_ES_PL__c</referenceTo>
        <relationshipLabel>Risk Factor P&amp;L Configurations</relationshipLabel>
        <relationshipName>Risk_Factor_PL_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor__c</fullName>
        <label>Risk Factor</label>
        <referenceTo>GE_ES_Risk_Factor__c</referenceTo>
        <relationshipLabel>Risk Factor P&amp;L Configurations</relationshipLabel>
        <relationshipName>Risk_Factor_PL_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_PL_Help_Text__c</fullName>
        <label>Help Text</label>
        <length>9000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GE_OG_Product_Service__c</fullName>
        <label>Product Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Sequence_No__c</fullName>
        <label>Sequence Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Site_Scope__c</fullName>
        <label>Site Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PGS_Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Module__c</fullName>
        <description>This field captures the association of Risk factor PL with Module such as Noise ,Far,Near etc.</description>
        <label>PW Module</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Factor_Name__c</fullName>
        <formula>GE_ES_Risk_Factor__r.GE_ES_Risk_Factor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Factor Name</label>
        <type>Text</type>
    </fields>
    <label>Risk Factor P&amp;L Configuration</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Risk Factor P&amp;L Configuration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Factor P&amp;L Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>